# v4l2-webcam-frame-grabber

./: .gitignore  LICENSE  Makefile  README.md  v4l2-webcam-frame-grabber.cabal
v4l2-webcam-frame-grabber/: Main.hs
